[package]
name = "bison"
version = "0.1.0"
authors = ["Vishal Canumalla <vishalcan@hotmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rlibc = "1.0.0"
bootloader = "0.9.8"
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
